--- a/style.css
+++ b/style.css
@@ -7,5 +7,5 @@ text-align: center;
 color: blue;
 }
 div {
-background-color: yellow;
+background-image: https://www.pexels.com/photo/green-leaf-1353938/;
 }
