--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 
 body {
-background-image: url('https://www.pexels.com/photo/green-leaf-1353938/');
+background-image: url('https://images.pexels.com/photos/1353938/pexels-photo-1353938.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2');
 }
 p {
 text-align: center;
