--- a/style2.css
+++ b/style2.css
@@ -1,5 +1,5 @@
 body {
-
+background-image: url('https://images.pexels.com/photos/1007025/pexels-photo-1007025.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2');
 }
 table, th, td {
 border: 3px solid pink;
