--- a/style.css
+++ b/style.css
@@ -8,8 +8,9 @@ h1{
   color: pink;
 }
 
-  li:before { content: &#9829
-             }
+ ul {
+  list-style-type: "&#9829"; 
+}
 
 p {
 text-align: left;
