--- a/style.css
+++ b/style.css
@@ -7,7 +7,9 @@ h1{
   text-align: center;
   color: pink;
 }
-
+ul {
+    list-style: none;
+}
  ul li:before {
     content: "\2665";
     color: #FFC0CB;
