--- a/style.css
+++ b/style.css
@@ -11,8 +11,9 @@ ul {
     list-style: none;
 }
  ul li:before {
-    content: "\2665";
+    content: "\2665   ";
     color: #FFC0CB;
+   text-align: left;
 }
 
 p {
