--- a/style3.css
+++ b/style3.css
@@ -4,7 +4,7 @@ color: light grey;
 div {
   display: block;
 }
-h1,p{
+h1{
   text-align: center;
   background-color: grey;
 }
@@ -13,4 +13,10 @@ text-align: left;
 }
 h3{
   text-align: right;
+}
+p.a {
+text-align: left;
+}
+p.b {
+  text-align-last: right;
 }
