--- a/style3.css
+++ b/style3.css
@@ -4,8 +4,10 @@ body {
 }
 
 h1{
-  font-size: 3px;
+  font-size: 30px;
 }
-hr{ width: 50%;
+hr{ width: 80%;
    height: 3px;
+   color: black;
+   text-align: left
 }
