--- a/style3.css
+++ b/style3.css
@@ -11,5 +11,6 @@ hr{ width: 80%;
    background-color: black;
    text-align: left
    border: none;
-   margin: 20px auto;
+   margin-left: 0;
+   margin-right: auto;
 }
