--- a/style3.css
+++ b/style3.css
@@ -1,7 +1,8 @@
 body {
 
   font-family: New Times Roman;
-}https://github.com/CassieD-13/CSC-350-Project-1/blob/main/style3.css
+   margin: 20px auto;
+}
 
 h1{
   font-size: 30px;
@@ -11,6 +12,5 @@ hr{ width: 80%;
    background-color: black;
    text-align: left
    border: none;
-   margin-left: 0;
-   margin-right: auto;
+   margin: 20px auto;
 }
