--- a/style3.css
+++ b/style3.css
@@ -3,11 +3,10 @@ body {
   font-family: New Times Roman;
   padding: 60px;
 }
-p{
-  font-size: 12px;
-}
+
 h1{
   font-size: 30px;
+  text-align: center;
 }
 hr{ width: 100%;
    height: 3px;
