--- a/style3.css
+++ b/style3.css
@@ -5,8 +5,9 @@ body {
 }
 
 h1{
-  font-size: 30px;
+  font-size: 70px;
   text-align: center;
+  background-color: grey;
 }
 hr{ width: 100%;
    height: 3px;
@@ -15,6 +16,4 @@ hr{ width: 100%;
    border: none;
    margin: 20px auto;
 }
-th, td {
-text-align: center;
-}
+
