--- a/style3.css
+++ b/style3.css
@@ -5,10 +5,10 @@ body {
 }
 
 h1{
-  font-size: 70px;
+  font-size: 60px;
   text-align: center;
-  background-color: grey;
 }
+
 hr{ width: 100%;
    height: 3px;
    background-color: black;
@@ -17,3 +17,6 @@ hr{ width: 100%;
    margin: 20px auto;
 }
 
+th,td{ 
+  margin: 20px auto;
+}
