--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ background-image: url('https://images.pexels.com/photos/1353938/pexels-photo-135
 h1{
   font-family: Courier;
   text-align: center;
-  color: pink;
+  color: #5C4033;
   font-size: 70px;
 }
 ul {
