--- a/style.css
+++ b/style.css
@@ -1,16 +1,16 @@
 
 body {
 background-image: url('https://images.pexels.com/photos/1353938/pexels-photo-1353938.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2');
+color: #5C4033;
 }
 h1{
   font-family: Courier;
   text-align: center;
-  color: #5C4033;
   font-size: 70px;
 }
 ul {
   list-style-type: "\2665";
-  color: pink;
+  list-color-type: pink;
 }
 
 
