--- a/style.css
+++ b/style.css
@@ -13,7 +13,8 @@ h1{
 ul {
   list-style-type: "\2665";
   list-color-type: pink;
-  font-size: 40px;
+  word-spacing: 3px;
+  font-size: 20px;
 }
 
 
