--- a/style2.css
+++ b/style2.css
@@ -2,7 +2,7 @@ body {
 background-image: url('https://images.pexels.com/photos/1007025/pexels-photo-1007025.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2');
 }
 table, th, td {
-border: 3px solid pink;
+border: 3px solid black;
 border-collapse: collapse;
 text-align: center;
 }
