--- a/style.css
+++ b/style.css
@@ -1,6 +1,9 @@
 
 body {
 background-image: url('https://images.pexels.com/photos/1353938/pexels-photo-1353938.jpeg?auto=compress&cs=tinysrgb&w=1200');
+background-repeat: no-repeat;
+background-size: cover;
+background-position: center;
 color: #5C4033;
 font-family: Courier;
 }
@@ -11,9 +14,7 @@ h1{
 }
 
 ul {
-  padding-left= 0;
   list-style-type: "\2665";
-  margin-right: 10px;
   font-size: 20px;
 }
 
