--- a/style2.css
+++ b/style2.css
@@ -1,5 +1,8 @@
 body {
-
+background-image: url('https://images.pexels.com/photos/399161/pexels-photo-399161.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2');
+background-repeat: no-repeat;
+background-size: cover;
+background-position: center;
 }
 table, th, td {
 border: 3px solid black;
