--- a/style2.css
+++ b/style2.css
@@ -4,6 +4,13 @@ background-repeat: no-repeat;
 background-size: cover;
 background-position: center;
 }
+h1{
+  text-align: center;
+  font-size: 40px;
+}
+table{
+width:100% >
+}
 table, th, td {
 border: 3px solid black;
 border-collapse: collapse;
