--- a/style2.css
+++ b/style2.css
@@ -1,5 +1,5 @@
 body {
-background-image: url('https://images.pexels.com/photos/733852/pexels-photo-733852.jpeg?auto=compress&cs=tinysrgb&w=1200');
+background-image: url('https://images.pexels.com/photos/19670/pexels-photo.jpg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2');
 background-repeat: no-repeat;
 background-size: cover;
 background-position: center;
